--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,17 +5,111 @@ output:
     keep_md: true
 ---
 
+## Introduction
+This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute 
+intervals through out the day. The data consists of two months of data from an anonymous individual collected during 
+the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
+
+## Data
+The data for this assignment can be downloaded from the course web site:
+Dataset: Activity monitoring data [52K] (https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip)
+
+The variables included in this dataset are:
+steps: Number of steps taking in a 5-minute interval (missing values are coded as NA)
+date: The date on which the measurement was taken in YYYY-MM-DD format
+interval: Identifier for the 5-minute interval in which measurement was taken
+
+The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.
 
 ## Loading and preprocessing the data
 
+```{r setup, include=FALSE, cache=FALSE}
+options(scipen = 1, digits = 2) #set to two decimal 
+```
+
+Load library
+```{r Load Library}
+library(ggplot2)
+```
+
+Define some global variables
+```{r Define global variables}
+cURLActivity <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+cZipActivity <- "activity.zip"
+cFileActivity <- "activity.csv"
+```
+
+Download the data file from the given URL
+```{r Download file}
+if (!file.exists(cZipActivity)){
+  download.file(cURLActivity, cZipActivity, method="curl")
+}  
+```
+
+Unzip the data file if the zip file exists but the uncompressed file does not exist
+```{r Unzip file}
+if (file.exists(cZipActivity) & !file.exists(cFileActivity)) { 
+  unzip(cZipActivity)
+}
+```
+
+Read the activity data into dataframe
+```{r Read data file into dataframe}
+if (!file.exists(cFileActivity)) {
+  print("Required data file is not ready. Please check the zip data file.")
+  return
+} else {
+  dfActivity <- read.csv(cFileActivity, colClasses=c("integer","Date","character"))
+}
+```
 
 
 ## What is mean total number of steps taken per day?
+* Ignore the missing values in the dataset.
+* Make a histogram of the total number of steps taken each day
+```{r}
+dfTotalStepsEachDay <- aggregate(steps ~ date, dfActivity, sum)
+g <- ggplot(dfTotalStepsEachDay, aes(steps))
+p <- g + geom_histogram(bins=5, color="black", fill="grey")
+p <- p + ggtitle("Histogram of the total number of steps taken each day")+xlab("Total number of steps each day")
+p <- p + theme(plot.title = element_text(hjust = 0.5))
+print(p)
+```
 
+* Calculate and report the mean and median total number of steps taken per day
+```{r}
+nMeanStepsEachDay <- mean(dfTotalStepsEachDay$steps)
+nMedianStepsEachDay <- median(dfTotalStepsEachDay$steps)
+```
+The mean of total number of steps taken per day is `r nMeanStepsEachDay`.
 
+The median of total number of steps taken per day is `r nMedianStepsEachDay`.
+
+The mean and the median are so close as shown in the histogram below:
+```{r}
+p <- p + geom_vline(aes(xintercept=nMeanStepsEachDay, color="Mean"), linewidth=1.5)
+p <- p + geom_vline(aes(xintercept=nMedianStepsEachDay, color="Median"), linetype="dashed", linewidth=1.5)
+p <- p + scale_color_manual(name = "Statistics", values = c(Mean="red", Median="blue"))
+print(p)
+```
 
 ## What is the average daily activity pattern?
+* Make a time series plot of the 5-minute interval and the average number of steps taken, averaged across all days 
+```{r}
+dfStepsInterval <- aggregate(steps~interval, dfActivity, FUN=mean)
+dfStepsInterval <- transform(dfStepsInterval, interval=as.numeric(interval))
+g <- ggplot(dfStepsInterval, aes(interval, steps))
+p <- g+geom_line()
+p <- p + ggtitle("Average Daily Activity Pattern")+xlab("5-minute Interval")+ylab("Average Number of Steps Taken")
+p <- p + theme(plot.title = element_text(hjust = 0.5))
+print(p)
+```
 
+* Find out which 5-minute interval, on average across all the days in the dataset, that contains the maximum number of steps
+```{r}
+nIntervalWithMaxNoOfSteps <- dfStepsInterval$interval[which.max(dfStepsInterval$steps)]
+```
+The 5-minute interval that contains the maximum number of steps is `r nIntervalWithMaxNoOfSteps`.
 
 
 ## Imputing missing values
