--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -113,7 +113,22 @@ The 5-minute interval that contains the maximum number of steps is `r nIntervalW
 
 
 ## Imputing missing values
+* Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+nTotalMissingValues <- nrow(dfActivity[is.na(dfActivity$steps),])
+```
+The total number of missing values in the dataset is `r nTotalMissingValues`.
 
+* Use mean for filling in all of the missing values in the dataset.
+dfImputedActivity <- transform(merge(dfActivity, dfStepsInterval, by="interval", all.x=TRUE, no.dups=TRUE), steps.x=ifelse(is.na(steps.x), steps.y, steps.x))
+
+* Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+* Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+
+* Do these values differ from the estimates from the first part of the assignment? 
+
+* What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
